--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -43,16 +43,19 @@ the median is `r medianStepsPerDay`.
 We should average the number of steps by date.
 Some days have no value at all hence they should be excluded from the plot.
 ```{r dailyPattern, echo=TRUE,results='hide'}
-averageStepsPerDay <-tapply(dt$steps, dt$date, mean,na.rm=TRUE)
-availableDates <- !is.na(averageStepsPerDay)
-plot(as.Date(names(averageStepsPerDay[availableDates])),
-     averageStepsPerDay[availableDates],
+averageStepsPerDayInterval <-tapply(dt$steps, dt$interval, mean,na.rm=TRUE)
+
+
+plot(names(averageStepsPerDayInterval),
+     averageStepsPerDayInterval,
      type='l',
-     xlab = 'Date',
+     xlab = 'Interval',
      ylab = 'Average steps per day')
 dev.copy(png,'figure/stepsPerDayTimeSeries.png')
 dev.off()
+maxInterval <- which.max(averageStepsPerDayInterval)
 ```
+Interval `r maxInterval` has the most number of steps
 
 ## Imputing missing values
 Data has `r sum(is.na(dt$steps))` `NA`s. We will impute the missing values by filling them with the mean of the 5-minute interval.
